<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:layout_scrollFlags="scroll|enterAlways"/>

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_below="@id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:layout_gravity="center">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_centerInParent="true"
                            tools:src="@android:color/darker_gray"
                            android:id="@+id/photo_about_profile"
                            android:transitionName="pict_animation"/>

                    </RelativeLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_arya_rezza_anantya"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_bergabung_sejak_12_oct_2018"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"/>

                    <android.support.v7.widget.CardView
                        app:cardCornerRadius="4dp"
                        app:cardElevation="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardUseCompatPadding="true">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="8dp">

                            <TableLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TableRow>

                                    <TextView
                                        android:id="@+id/username"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginEnd="8dp"
                                        android:text="@string/txt_username"
                                        android:textSize="16sp" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text=":" />

                                    <TextView
                                        android:id="@+id/txt_username"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="8dp"
                                        android:ellipsize="end"
                                        android:maxLines="1"
                                        android:text="@string/txt_aryarezza"
                                        android:textSize="16sp"
                                        android:textStyle="bold" />

                                </TableRow>

                                <TableRow>

                                    <TextView
                                        android:id="@+id/email"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginEnd="8dp"
                                        android:text="@string/txt_email"
                                        android:textSize="16sp" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text=":" />

                                    <TextView
                                        android:id="@+id/txt_email"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="8dp"
                                        android:ellipsize="end"
                                        android:maxLines="1"
                                        android:text="@string/txt_anantya4995_gmail_com"
                                        android:textStyle="bold"
                                        android:textSize="16sp" />

                                </TableRow>

                                <TableRow>

                                    <TextView
                                        android:id="@+id/jk"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginEnd="8dp"
                                        android:text="@string/txt_jenis_kelamin"
                                        android:textSize="16sp" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text=":" />

                                    <TextView
                                        android:id="@+id/txt_jk"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="8dp"
                                        android:ellipsize="end"
                                        android:maxLines="1"
                                        android:text="@string/txt_laki_laki"
                                        android:textSize="16sp"
                                        android:textStyle="bold" />

                                </TableRow>

                            </TableLayout>

                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>