<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:layout_scrollFlags="scroll|enterAlways"/>

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/app_bar">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <ProgressBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/progress_circular"
                            android:layout_centerInParent="true"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="420dp"
                            android:maxWidth="420dp"
                            android:scaleType="centerCrop"
                            android:layout_centerInParent="true"
                            tools:src="@android:color/darker_gray"
                            android:id="@+id/photo_rider_profile"
                            android:transitionName="pict_animation"/>

                    </RelativeLayout>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardElevation="2dp"
                        app:cardCornerRadius="4dp"
                        app:cardUseCompatPadding="true">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp">

                            <TableLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TableRow>

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/txt_name_rider"
                                        android:textSize="16sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_height="wrap_content"
                                        android:layout_width="wrap_content"
                                        android:layout_marginStart="8dp"
                                        android:layout_marginEnd="8dp"
                                        android:text=":"/>

                                    <TextView
                                        android:layout_height="wrap_content"
                                        android:layout_width="wrap_content"
                                        android:textSize="16sp"
                                        android:layout_weight="1"
                                        android:id="@+id/txt_name_rider"/>

                                </TableRow>

                                <TableRow>

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/txt_gelar_juara"
                                        android:textSize="16sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_height="wrap_content"
                                        android:layout_width="wrap_content"
                                        android:layout_marginStart="8dp"
                                        android:layout_marginEnd="8dp"
                                        android:text=":"/>

                                    <TextView
                                        android:layout_height="wrap_content"
                                        android:layout_width="match_parent"
                                        android:textSize="16sp"
                                        android:layout_weight="1"
                                        android:id="@+id/txt_gelar_rider"/>

                                </TableRow>

                                <TableRow>

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/txt_deskripsi_rider"
                                        android:textSize="16sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_height="wrap_content"
                                        android:layout_width="wrap_content"
                                        android:layout_marginStart="8dp"
                                        android:layout_marginEnd="8dp"
                                        android:text=":"/>

                                </TableRow>

                                <TextView
                                    android:layout_height="wrap_content"
                                    android:layout_width="match_parent"
                                    android:textSize="16sp"
                                    android:layout_weight="1"
                                    android:textColor="@android:color/black"
                                    android:id="@+id/txt_deskripsi_rider"/>

                            </TableLayout>

                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>